# libvits-ncnn

./: .gitignore  CMakeLists.txt  README.md  vitsncnn.cpp  vitsncnn.hpp
demo/: CMakeLists.txt  utils.cpp  utils.hpp  vitsdemo.cpp  vitsncnn.hpp
fftpack/: CMakeLists.txt
openjtalk/: CMakeLists.txt
openjtalk/api/: api.cpp  api.h
openjtalk/mecab/: char_property.h  config.h  connector.cpp  dictionary.cpp  feature_index.cpp  feature_index.h  libmecab.cpp  mecab.cpp  mecab.h  mmap.h  tokenizer.cpp  viterbi.cpp
vits/: SynthesizerTrn.cpp  SynthesizerTrn.h  utils.cpp  utils.h
wave_utils/: wave.h
